# auto-animator-desktop

./: .gitignore  pipeline_core.py  run_pipeline_cli.py
.github/workflows/: desktop-release.yml
desktop-app/: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json
desktop-app/src/: App.tsx  styles.css  types.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/runtime/: README.md
desktop-app/src-tauri/src/: lib.rs  main.rs
desktop-app/src/lib/: api.ts
desktop-app/tools/: build_pipeline_runner.ps1  build_pipeline_runner.sh
